--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.SettingsActivity"/>
         <activity android:name=".activities.MainActivity"/>
         <activity android:name=".activities.DetailMovie"/>
         <activity android:name=".activities.SplashScreen">
